--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://amirazadi1380.github.io/music/",
+  "homepage": "https://amirazadi1380.github.io/music",
   "name": "music",
   "private": true,
   "version": "0.0.0",
